[package]
name = "tms"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
log = "0.4.21"
simplelog = "0.12"
prettytable-rs = "0.10.0"
xml-doc = "0.2.0"
rust-embed = {version = "8", features = ["include-exclude"]}
dirs = "5.0.1"
